--- a/views/pages/employee/viewInquiries.hbs
+++ b/views/pages/employee/viewInquiries.hbs
@@ -5,8 +5,9 @@
     <div class="inquiry-screen-container">
         {{> _h1styled headerTitle="View Inquiries"}}
         <div class="inquiry-header">
-            <h3>All Inquiries</h3>
-            <button class="btn btn-primary"> Submit an Inquiry</button>
+            <button class="btn btn-primary" disabled> All Inquiries</button>
+            <button class="btn btn-primary">Pending Response</button>
+            <button class="btn btn-primary"> My Responses</button>
         </div>
         <div class="inquiry-message-box-container">
             <ul class="inquiry-ul-style">
