--- a/views/pages/public/accessdenied.hbs
+++ b/views/pages/public/accessdenied.hbs
@@ -1,1 +1,3 @@
-<h1>Access denied please login</h1>
+<h1>403: You do not have access to this resource</h1>
+
+<p>Please contact your administrator</p>
