--- a/views/partials/employee/_emploginform.hbs
+++ b/views/partials/employee/_emploginform.hbs
@@ -7,7 +7,7 @@
 {{!-- <form action="{{#equal type "Employee"}}api/v1/employees/login{{/equal}}" method="post" name="{{type}}Login" id="{{type}}Login"> --}}
 <form name="{{type}}Login" id="{{type}}LoginForm">
     <div class="form-group">
-        <label for="{{type}}Email">{{type}} email</label>
+        <label for="{{type}}Email">{{type}} Email</label>
         <input type="email" name="email" class="form-control" id="{{type}}Email" aria-describedby="emailHelp" placeholder="Enter email">
     </div>
     <div class="form-group">
