--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -22,7 +22,17 @@
                     <ul class="">
                         <li><a href="/about">About Us</a></li>
                         <li><a href="/about#members">Members</a></li>
-                        <li><a href="/contactUs">Contact Us</a></li>
+                        {{#unless userType}}
+                            <li><a href="/contactUs">Contact Us</a></li>
+                        {{/unless}}
+                        {{#if userType}}
+                            {{#equal userType "Guest"}}
+                                <li><a href="/contactUs">Contact Us</a></li>
+                            {{/equal}}
+                            {{#notEqual userType "Guest"}}
+                                <li><a href="/dashboard/staff/inquiries">Inbox</a></li>
+                            {{/notEqual}}
+                        {{/if}}
                         <li><a href="/devlinks">Devlinks (TODO: REMOVE)</a></li>
                     </ul>
                 </div>
