--- a/views/pages/public/accessdenied.hbs
+++ b/views/pages/public/accessdenied.hbs
@@ -1,3 +1,6 @@
-<h1>403: You do not have access to this resource</h1>
-
-<p>Please contact your administrator</p>
+<div class="error-page-wrapper">
+    <div class="error-page-content-container">
+        {{> _h1styled headerTitle=headerTitle}}
+        <p class="mt-4">Please contact your administrator</p> 
+    </div>
+</div>
