--- a/views/pages/public/accessrestricted.hbs
+++ b/views/pages/public/accessrestricted.hbs
@@ -1,1 +1,7 @@
-<h1>401: Token Expired! Please Login again</h1>
+
+<div class="error-page-wrapper">
+    <div class="error-page-content-container">
+        {{> _h1styled headerTitle=headerTitle}}
+        <p class="mt-4">Session expired. Please log in again!</p>
+    </div>
+</div>
