--- a/views/pages/public/devlinks.hbs
+++ b/views/pages/public/devlinks.hbs
@@ -43,15 +43,18 @@
         <li>Hotel Staff pages</li>
         <li>[DONE, TESTED & REVIEWED]<a href="/portal"> Employee Online Portal</a></li>
         <li>[DONE, TESTED & REVIEWED]<a href="/dashboard/staff/65dfe87201b6131436544414"> Hotel Staff Account Page</a></li>
-        <li><span style="color:red">[pending]</span><a href="/dashboard/staff/reservation">Hotel Staff View Single Reservation</a></li>
+        <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript)]</span><a href="/dashboard/staff/reservation">Hotel Staff View Single Reservation</a></li>
         <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript popup)]</span><a href="/dashboard/staff/viewReservations">Hotel Staff View Reservations List</a></li>
         <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript popup)]</span><a href="/dashboard/staff/checkin"> Hotel Staff View Guests Checking In</a></li>
-        <li><span style="color:red">[pending]</span><a href="/dashboard/staff/inquiries"> Hotel Staff Inquiries Page</a></li>
-        <li><span style="color:red">[pending]</span><a href="/checkout/staff/create"> Hotel Staff Create Reservations Page</a></li>
+        <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript)]</span><a href="/dashboard/staff/inquiries"> Hotel Staff Inquiries Page</a></li>
+        <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript)]</span><a href="/checkout/staff/create"> Hotel Staff Create Reservations Page</a></li>
         <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript popup)]</span><a href="/dashboard/manager/offers"> Manager View List Offers Page (Buttons: Add, Edit, Delete)</a></li>
         <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript popup)]</span><a href="/dashboard/manager/promotions"> Manager View List Promotions Page (Buttons: Add, Edit, Delete)</a></li>
         <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript popup)]</span><a href="/dashboard/manager/rooms"> Manager View List Rooms Page (Buttons: Add, Edit, Delete)</a></li>
         <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript popup)]</span><a href="/dashboard/USNVMQD493/users"> Admin View List User Accounts Page (Buttons: Add, Edit, Delete, manage permissions)</a></li>
+        {{!-- <span style="color:red">[pending]</span> --}}
+        <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript)]</span><a href="/dashboard/guest/upload-photo">Staff Upload Photo</a></li>
+          <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript)]</span><a href="/dashboard/manager"> Manager Dashboard Page</a></li>
         <div style="display:none">
             <li><a href="/dashboard/manager"> Manager Dashboard Page</a></li>
             <li><a href=""> Manager View/Edit Single Offer Page</a></li>
