--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -56,6 +56,10 @@
     integrity="sha512-HGOnQO9+SP1V92SrtZfjqxxtLmVzqZpjFFekvzZVWoiASSQgSr4cw9Kqd2+l8Llp4Gm0G8GIFJ4ddwZilcdb8A=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   {{/if}}
+
+  {{#if addChartsJS}}
+    <script defer src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  {{/if}}
 </head>
 <body>
 
