added create offer pages

--- a/views/pages/employee/empDashboard.hbs
+++ b/views/pages/employee/empDashboard.hbs
@@ -73,6 +73,11 @@
                                                     <p>Create Promotion</p>
                                                 </button>
                                             </a>
+
+                                            <button id="resetmanagercode" class="btn button-action-style">
+                                                <img src="/img/icons/general/review.svg" alt="icon">
+                                                <p>Reset Code</p>
+                                            </button>
                                         </div>
                                     </div>
                                     </div>
