--- a/views/pages/employee/manager/createRoom.hbs
+++ b/views/pages/employee/manager/createRoom.hbs
@@ -1,7 +1,13 @@
 <div class="create-room-page-container">
     <div class="create-room-page-wrapper">
         {{> _h1styled headerTitle=headerTitle}}
-
+        {{#if readOnly}}
+            <h3>ID: AHDIHASDUIAD8AS9DSA</h3>
+            <div class="mt-3">
+                <button class="btn btn-primary">EDIT</button>
+                <button class="btn btn-danger">DELETE</button>
+            </div>
+        {{/if}}
         <form >
             <div class="form-wrap">
                 <div class="card form-card-create-room">
@@ -127,30 +133,30 @@
                         <div id="assignedRoomNumbersContainer"></div>
 
                         <h6>Offers</h6>
-                            <div class="accordion" id="offeraccordion">
-                                {{#each offers}}
-                                    <div class="accordion-item">
-                                        <div class="accordion-header" id="offerheading{{@index}}">
-                                            <h5 class="mb-0">
-                                                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#ocollapse{{@index}}" aria-expanded="true" aria-controls="ocollapse{{@index}}">
-                                                    {{#unless ../readOnly}}
-                                                        <input name="offers" type="checkbox" class="align-middle" value="{{id}}" style="margin-right: 15px;"> 
-                                                    {{/unless}}
-                                                    {{this.name}}
-                                                </button>
-                                            </h5>
-                                        </div>
+                        <div class="accordion" id="offeraccordion">
+                            {{#each offers}}
+                                <div class="accordion-item">
+                                    <div class="accordion-header" id="offerheading{{@index}}">
+                                        <h5 class="mb-0">
+                                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#ocollapse{{@index}}" aria-expanded="true" aria-controls="ocollapse{{@index}}">
+                                                {{#unless ../readOnly}}
+                                                    <input name="offers" type="checkbox" class="align-middle" value="{{id}}" style="margin-right: 15px;"> 
+                                                {{/unless}}
+                                                {{this.name}}
+                                            </button>
+                                        </h5>
+                                    </div>
 
-                                        <div id="ocollapse{{@index}}" class="collapse" aria-labelledby="offerheading{{@index}}" data-parent="#offeraccordion">
-                                            <div class="card-body">
-                                                ID: {{this.id}}<br>
-                                                Type: {{this.type}}<br>
-                                                Value: {{this.value}}
-                                            </div>
+                                    <div id="ocollapse{{@index}}" class="collapse" aria-labelledby="offerheading{{@index}}" data-parent="#offeraccordion">
+                                        <div class="card-body">
+                                            ID: {{this.id}}<br>
+                                            Type: {{this.type}}<br>
+                                            Value: {{this.value}}
                                         </div>
                                     </div>
-                                {{/each}}
-                            </div>
+                                </div>
+                            {{/each}}
+                        </div>
    
                         <h6 class="mt-3">Price Change Trends</h6>
                         <div class="accordion" id="priceChangeaccordion">
