--- a/views/pages/hotelguest/reservation.hbs
+++ b/views/pages/hotelguest/reservation.hbs
@@ -55,11 +55,23 @@
                         </div>
                     </form>
 
+       
                     <div>
                         <div class="card mt-4">
                             {{> formContents/_paymentInfo readOnly="true" headerText="Payment Information"}}
                         </div>
                     </div>
+
+                    {{#if userType}}
+                        {{#notEqual userType "Guest"}}
+                        <button class="btn btn-primary mt-4">Add Promotion</button>
+                        {{!-- <div>
+                            <div class="card mt-4">
+                                {{> formContents/_paymentInfo readOnly="true" headerText="Add Promotion"}}
+                            </div>
+                        </div> --}}
+                        {{/notEqual}}
+                    {{/if}}
                     
                 </div>
                 {{/if}}
