added admin login

--- a/views/pages/employee/empDashboard.hbs
+++ b/views/pages/employee/empDashboard.hbs
@@ -173,6 +173,12 @@
                                                     <p>View Inquiries</p>
                                                 </button>
                                             </a>
+                                            <a href="/dashboard/manager/report">
+                                                <button class="btn button-action-style">
+                                                    <img src="/img/icons/general/review.svg" alt="icon">
+                                                    <p>Generate Report</p>
+                                                </button>
+                                            </a>
                                             <a href="/dashboard/manager/offers">
                                                 <button class="btn button-action-style">
                                                     <img src="/img/icons/general/review.svg" alt="icon">
@@ -183,6 +189,12 @@
                                                 <button class="btn button-action-style">
                                                     <img src="/img/icons/general/review.svg" alt="icon">
                                                     <p>View Rooms</p>
+                                                </button>
+                                            </a>
+                                            <a href="/dashboard/manager/promotions">
+                                                <button class="btn button-action-style">
+                                                    <img src="/img/icons/general/review.svg" alt="icon">
+                                                    <p>View Promotions</p>
                                                 </button>
                                             </a>
                                             <a href="/dashboard/manager/createoffer">
