--- a/views/pages/public/devlinks.hbs
+++ b/views/pages/public/devlinks.hbs
@@ -54,16 +54,22 @@
         <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript popup)]</span><a href="/dashboard/USNVMQD493/users"> Admin View List User Accounts Page (Buttons: Add, Edit, Delete, manage permissions)</a></li>
         {{!-- <span style="color:red">[pending]</span> --}}
         <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript)]</span><a href="/dashboard/guest/upload-photo">Staff Upload Photo</a></li>
-          <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript)]</span><a href="/dashboard/manager"> Manager Dashboard Page</a></li>
-        <div style="display:none">
-            <li><a href="/dashboard/manager"> Manager Dashboard Page</a></li>
-            <li><a href=""> Manager View/Edit Single Offer Page</a></li>
-            <li><a href=""> Manager View/Edit Single Offer Promotion Page</a></li>
-            <li><a href=""> Manager View/Edit Single Offer Room Page</a></li>
-            <li><a href=""> Manager Generate Report Page</a></li>
-            <li><a href="/dashboard/USNVMQD493/ssdas"> Admin Dashboard Page</a></li>
-            <li><a href=""> Admin View/Edit User Account Accounts Page</a></li>
-            <li><a href=""> Admin Manage Permissions Accounts Page</a></li>
-        </div>
+        <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript)]</span><a href="/dashboard/manager"> Manager Dashboard Page</a></li>
+        <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript)]</span><a href="/dashboard/manager/adasds"> Manager Dashboard Page</a></li>
+        <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript)]</span><a href="/dashboard/manager/viewoffer/SDF4HN"> Manager View/Edit Single Offer Page</a></li>
+        <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript)]</span><a href="/dashboard/manager/viewoffer/SDF4HN"> Manager Create Single Offer Page</a></li>
+        <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript)]</span><a href="/dashboard/manager/viewpromotion/SBD73I"> Manager View/Edit Single Offer Promotion Page</a></li>
+        <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript)]</span><a href="/dashboard/manager/createoffer"> Manager Create Single Offer Promotion Page</a></li>
+        <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript)]</span><a href="/dashboard/manager/viewroom/FFE4rtregdf"> Manager View/Edit Single Offer Room Page</a></li>
+        <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript)]</span><a href="/dashboard/manager/createroom"> Manager Create Single Offer Room Page</a></li>
+        <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript)]</span><a href="/dashboard/manager/report"> Manager Generate Report Page</a></li>
+        <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript)]</span><a href="/dashboard/USNVMQD493/ssdas"> Admin Dashboard Page</a></li>
+        <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript)]</span><a href="/dashboard/USNVMQD493/users"> Admin View List of Guest Accounts Page</a></li>
+        <li><span style="color:red">[pending]</span><a href=""> Admin View/Edit Guest Account Account Page</a></li>
+        <li><span style="color:red">[pending]</span><a href=""> Admin Create Guest Account Accounts Page</a></li>
+        <li><span style="color:red">[pending]</span><a href=""> Admin View List of Employee Accounts Page</a></li>
+        <li><span style="color:red">[pending]</span><a href=""> Admin View/Edit Employee Account Accounts Page</a></li>
+        <li><span style="color:red">[pending]</span><a href=""> Admin Create Employee Account Accounts Page</a></li>
+        <li><span style="color:red">[pending]</span><a href=""> Admin Manage Permissions Accounts Page</a></li>
     </ul>
 </div>
